# AMPy

./: .gitignore  .readthedocs.yaml  README.md  Readme.md  Untitled.ipynb  ampy_video.ipynb  coveralls.yml  main.py  pyproject.toml  requirements.txt  sandbox.py
.github/workflows/: coveralls.yml  pylint.yml  python-publish.yml
ST_lib/: sandbox.py
ST_lib/Tests/: test_video_processor.py
ST_lib/swarmtronics/: video_processor.py
Tests/: test_three_dimensional_statistics.py  test_two_dimensional_statistics.py  test_video_processor.py
Tests/test_two_dimensional_statistics_files/: get_mean_cartesian_displacements_truth.npy  get_mean_polar_angle_truth.npy
ampy/: animation.py  processing.py  statistics2d.py  utils.py
amtoolkit/: __init__.py  processing.py  statistics2d.py  statistics3d.py
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst
docs/source/modules/: utils.rst  (+4 more)
edited/: 01_03_[PWM_3_number_1].npy  01_03_[PWM_3_number_2].npy  01_03_[PWM_3_number_3].npy  01_03_[PWM_4_number_3].npy  01_03_[PWM_5_number_2].npy  01_03_[PWM_5_number_3].npy  01_04_[PWM_2_number_1].npy  01_04_[PWM_2_number_3].npy  01_04_[PWM_5_number_1].npy  01_08_[PWM_1_number_3].npy  01_11_[PWM_1_number_2].npy  01_16_[PWM_1_number_1].npy  02_03_[PWM_4_number_2].npy  02_04_[PWM_4_number_1].npy  02_06_[PWM_2_number_2].npy
marker_generator/: generator.ipynb
swarmtronics/: three_dimensional_statistics.py  two_dimensional_statistics.py  video_processor.py
tests/: test_animation.py  test_processing.py  test_requirements.txt  test_statistics2d.py  test_statistics3d.py  test_utils.py
(+14 files in other folders)
