[build-system]
requires=["flit_core >=3.2,<4"]
build-backend="flit_core.buildapi"

[project]
name="ampy"
version="0.1.3.1"
authors=[
    {name="Vadim Porvatov", email="eighonet@gmail.com"},
    {name="Mikhail Buzakov", email="m.k.buzakov@gmail.com"}
]
description="Python-based Processing Tool for Active Matter Experiments"
readme="README.md"
requires-python=">=3.8"
keywords=[
    "active-matter",
    "disordered-systems",
    "swarm-robotics",
    "order-parameter",
    "correlation-map",
]
classifiers=[
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies=[
    "numpy<=1.21.6",
    "matplotlib>=3.7.1",
    "ffmpeg-python>=0.2.0",
    "opencv-contrib-python==4.6.0.66",
    "imageio-ffmpeg>=0.4.8",
    "imutils>=0.5.4",
    "celluloid>=0.2.0",
    "imageio>=2.27.0",
]

[project.urls]
homepage="https://swarmtronics.com"
documentation="https://ampy.readthedocs.io"
repository="https://github.com/swarmtronics/AMPy.git"

[tool.flit.module]
name="ampy"
